Just little old me and my map

--- a/getdown/applet-test.html
+++ b/getdown/applet-test.html
@@ -2,11 +2,11 @@
         archive="https://sites.google.com/site/carnecarne2011/game/carneLauncher.jar">
   <param name="archive" value="https://sites.google.com/site/carnecarne2011/game/carneLauncher.jar"/>
   <param name="code" value="com.threerings.getdown.launcher.GetdownApplet"/>
-  <param name="appname" value="%HOME%\AppData\LocalLow\myapp\CarneCarne"/>
+  <param name="appname" value="CarneCarne"/>
   <param name="appbase" value="https://sites.google.com/site/carnecarne2011/game/"/>
   <param name="bgimage" value="https://sites.google.com/site/carnecarne2011/game/splashLogo.png"/>
   <param name="errorbgimage" value="https://sites.google.com/site/carnecarne2011/game/splashLogo.png"/>
   <param name="ui.status" value="30, 60, 364, 80"/>
-  <param name="ui.status_text" value="FFEC48"/>
+  <param name="ui.status_text" value="000000"/>
   <div class="nojava">You must first install Java to play this game in your browser!</div>
 </object>
